# hhvm

./: CMakeLists.txt  Makefile  README.md  configure_generic.sh
CMake/: FindBoost.cmake  FindMySQL.cmake  HPHPFindLibs.cmake  HPHPInstall.cmake
debian/: README.Debian  TODO  changelog  control  copyright  hhvm-dev.install  hhvm-dev.lintian-overrides  hhvm.dirs  hhvm.init  hhvm.install  hhvm.lintian-overrides  hhvm.upstart  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  php.ini  repack  rules
debian/patches/: CVE-2015-3413.patch  CVE-2015-4024.patch  D2486378-compress_bzip2.patch  D37821-allow-float-timeout-on-socket-connections.diff  D37899-ext_reflection.patch  D40473-strtr.patch  D44265-filter_var_array.patch  D45165-unserialize_ex.patch  add-adminserver-httpport.patch  add-jemalloc-prof-status.patch  do_not_link_async_mysql.patch  expose-api-version.patch  ezc-clear-exception.patch  ezc-fix-count-and-conversion-to-boolean.patch  ezc-fix-z-type-in-zend_parse_parameters.patch  fix-mysql-libraries.patch  fix_leak_bitwise_string_operations.patch  fix_libboost_memleak.patch  fix_stats_error.patch  getrusage-report-RUSAGE_THREAD.patch  htmlencode_wddx_serialize_value.patch  memcached-increment-ascii.patch  only-initialize-sweepables-on-new-threads.patch  output-streaming.patch  pass-DNDEBUG-to-RelWithDebInfo.patch  pcre-cache-refactor.patch  preserve-user-handler-on-session_destroy.patch  prevent-domdocument-memleak.patch  series  set-default-config-file-in-etc-hhvm.patch  support-custom-stream-wrappers-in-xmlreader.patch  support-more-sql-stats.patch  typos.patch  uniqify-eval-filename.patch  use_system_TZinfo.patch  use_system_double_conversion.patch  use_system_libsqlite3.patch  use_system_libzip.patch  use_system_lz4.patch  use_system_pcre.patch
src/: CMakeLists.txt  Makefile
src/compiler/: Makefile
src/compiler/analysis/: variable_table.cpp
src/cpp/base/: builtin_functions.cpp  builtin_functions.h  preg.cpp  runtime_option.cpp  runtime_option.h  type_array.h  type_variant.h
src/cpp/base/server/: http_protocol.cpp  libevent_server.cpp  libevent_server_with_takeover.cpp  libevent_transport.cpp
src/cpp/ext/: ext_class.cpp  ext_curl.cpp  ext_icu.cpp  ext_mb.cpp  ext_misc.cpp  ext_openssl.h  ext_options.cpp
src/hphp/: CMakeLists.txt  Makefile
src/hphpi/: Makefile
src/idl/: Makefile  curl.idl.php
src/lib/: Makefile
src/lib/expression/: new_object_expression.cpp
src/runtime/base/server/: libevent_server.cpp  libevent_transport.cpp
src/runtime/ext/: ext_curl.cpp  ext_curl.h  extension.cpp
src/system/: curl.inc
src/test/: Makefile  test_ext_curl.cpp  test_ext_curl.h
src/util/neo/: neo_str.c
(+1 files in other folders)
